--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.17.0",
@@ -51,6 +52,8 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "pg": "^8.5.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "sequelize": "^6.3.5"
   }
 }
